# PIAIC-Agentic-AI

./: 1st_chatbot.ipynb  BRAT_sample_code.ipynb  Hello_World.ipynb  README.md  finetuning.ipynb  real_rag.ipynb  tool_calling.ipynb  ytf.ipynb
first/: README.md  pyproject.toml
first/src/first/: main.py
first/src/first/crews/cart_crew/: cart_crew.py
first/src/first/crews/cart_crew/config/: agents.yaml  tasks.yaml
second/: README.md  pyproject.toml
second/src/second/: main.py
second/src/second/crews/cart_crew/: cart_crew.py
second/src/second/crews/cart_crew/config/: agents.yaml  tasks.yaml
